fix mascot alignment

--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -24,7 +24,7 @@ flex-direction: column;
 #top-bar {
     background-color: #2276d2;
     color: white;
-    padding: 10px 10px;
+    padding: 10px 32px;
     font-size: 0.75rem;
     font-weight: 600;
     display: flex;
